Ignore bad links.